[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "prasanth",email = "dadiprasanth24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pubmed_fetcher", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
